DSSINTER-1044: Custom header check added for CSRF protection + Some OpenAPI and Javadoc updates
