# signserver/modules/SignServer-REST-web/src/main/java/org/signserver/rest/api/exception/ForbiddenExceptionMapper.java
@@ -1,0 +1,35 @@
+/*************************************************************************
+ *                                                                       *
+ *  SignServer: The OpenSource Automated Signing Server                  *
+ *                                                                       *
+ *  This software is free software; you can redistribute it and/or       *
+ *  modify it under the terms of the GNU Lesser General Public           *
+ *  License as published by the Free Software Foundation; either         *
+ *  version 2.1 of the License, or any later version.                    *
+ *                                                                       *
+ *  See terms of license at gnu.org.                                     *
+ *                                                                       *
+ *************************************************************************/
+package org.signserver.rest.api.exception;
+
+import org.signserver.common.ForbiddenException;
+import org.signserver.rest.api.entities.ErrorMessage;
+
+import javax.ws.rs.core.Response;
+import javax.ws.rs.ext.ExceptionMapper;
+import javax.ws.rs.ext.Provider;
+
+import static javax.ws.rs.core.Response.status;
+
+@Provider
+public class ForbiddenExceptionMapper implements ExceptionMapper<ForbiddenException> {
+
+    @Override
+    public Response toResponse(ForbiddenException e) {
+        return status(Response.Status.FORBIDDEN)
+                .header("Content-Type", "application/json")
+                .entity(new ErrorMessage(e.getMessage()))
+                .build();
+    }
+
+}
